[package]
name = "function-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.86" }
syn = { version = "2.0.68", features = ["full"] }
quote = { version = "1.0.36" }
